--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,16 +5,21 @@
   "private": true,
   "scripts": {
     "dev": "tsnd -r tsconfig-paths/register --transpile-only --respawn src/infra/server.ts",
-    "test": "NODE_ENV=test jest"
+    "test": "NODE_ENV=test jest -i"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.18"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/supertest": "^2.0.10",
     "supertest": "^6.1.3",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.6",
