--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,17 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "js-cookie": "^2.2.1",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
     "@types/styled-components": "^5.1.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
