--- a/.gitignore
+++ b/.gitignore
@@ -136,10 +136,16 @@ sketch
 !.yarn/sdks
 !.yarn/versions
 
+
+# and uncomment the following lines
+.pnp.*
+
+
 # Docker volumes
 docker
 
-and uncomment the following lines
-.pnp.*
+# Mongodb playground
+.mongodb
+
 
 # End of https://www.toptal.com/developers/gitignore/api/node,react,yarn
