--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -18,9 +18,15 @@
       "@components/*": ["./src/components/*"],
       "@styles/*": ["./src/styles/*"],
       "@store/*": ["./src/store/*"],
+      "@pages/*": ["./src/pages/*"],
       "@assets/*": ["./src/assets/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/components/Pages/Home/styles..s"
+  ],
   "exclude": ["node_modules"]
 }
