Added create page functionality

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,7 +20,10 @@
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "styled-components": "^5.2.1"
+    "remark-parse": "^9.0.0",
+    "remark-react": "^8.0.0",
+    "styled-components": "^5.2.1",
+    "unified": "^9.2.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^2.2.6",
