--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
     container_name: techblog_client
     build: ./packages/client
     command: yarn dev
+    environment:
+      NODE_ENV: production
     depends_on:
       - server
     ports:
