--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start:dev": "NODE_ENV=development next dev",
+    "start:development": "NODE_ENV=development next dev",
     "start:production": "NODE_ENV=production next dev",
     "build": "NODE_ENV=production next build",
     "start": "next start"
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "highlight.js": "^10.7.1",
     "js-cookie": "^2.2.1",
+    "lottie-web": "^5.7.7",
     "mdx": "^0.3.1",
     "next": "10.0.5",
     "next-mdx-remote": "^2.1.3",
