--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "tsnd -r tsconfig-paths/register --transpile-only --respawn src/infra/server.ts",
+    "start:development": "tsnd -r tsconfig-paths/register --transpile-only --respawn src/infra/server.ts",
     "test": "NODE_ENV=test jest -i"
   },
   "dependencies": {
