Created comment and views for articles pages

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   database:
-    container_name: techblog_database
+    container_name: byte_database
     image: mongo:latest
     ports:
       - 27018:27017
@@ -11,17 +11,23 @@ services:
     volumes:
       - ./packages/docker/database:/data/db
   server:
-    container_name: techblog_server
+    container_name: byte_server
     build: ./packages/server
     command: yarn start:development
     depends_on:
       - database
-    environment:
-      PORT: 5050
-      DB_CONNECTION: mongodb://root:root@database:27017/techblog?authSource=admin
-      DB_CONNECTION_TEST: mongodb://root:root@localhost:27018/techblog-test?authSource=admin
     ports:
       - 5050:5050
     volumes:
       - ./packages/server:/server
       - /server/node_modules
+  client:
+    container_name: byte_client
+    build: ./packages/client
+    command: >
+      sh -c "yarn build &&
+             yarn start"
+    depends_on:
+      - server
+    ports:
+      - 3000:3000
