--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "@byte_blog/client",
+  "name": "@byte/client",
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start:development": "NODE_ENV=development next dev",
-    "start:production": "NODE_ENV=production next dev",
-    "build": "NODE_ENV=production next build",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
@@ -16,8 +15,8 @@
     "mdx": "^0.3.1",
     "next": "10.0.5",
     "next-mdx-remote": "^2.1.3",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
